# aquarium

./: .gitignore  CMakeLists.txt  README.md  aquarium.c  aquarium.h  cartesian_point.c  compile  config.xml  display.h  dl_list.c  dl_list.h  fish.c  fish.h  fishes.c  fishes.h  harmonic_movement.h  main.c  object.h  run.sh  sl_list.c  sl_list.h  time_handler.c  time_handler.h
include/: aquarium.h  cartesian_point.h  cartesian_velocity.h  fish.h  fishes.h  graphics_paths.h  polar_point.h
src/: aquarium.c  aquarium.h  cartesian_point.c  cartesian_point.h  cartesian_velocity.c  cartesian_velocity.h  degrees.c  degrees.h  display.c  display.h  dl_list.c  dl_list.h  exit_codes.h  fish.c  fish.h  fishes.c  fishes.h  graphics_paths.h  harmonic_motion.c  harmonic_motion.h  harmonic_movement.c  harmonic_velocity.c  harmonic_velocity.h  main.c  memory_handling.h  object.c  object.h  polar_point.c  polar_point.h  polar_velocity.c  polar_velocity.h  random.c  random.h  time_handler.c  time_handler.h  translational_motion.c  translational_motion.h  wall.h
src/config_parser/: config_parser.c  config_parser.h  xml_tree.c  xml_tree.h
src/display/: display.c  display.h  graphics_paths.h
src/fishes/: dl_list.c  dl_list.h  fish.c  fish.h  fishes.c  fishes.h
src/fishes/motion/: harmonic_motion.h  harmonic_velocity.c  harmonic_velocity.h  polar_point.c  translational_motion.c
tests/: CMakeLists.txt  run_tests.sh
tests/resources/: testable_xml_file.xml
tests/xml_parsing/: CMakeLists.txt  retrieving_node_name_from_path.c  retrieving_value_from_nodes.c  skip_slashes_in_path.c  traversing_with_path.c  trimming_whitespace.c
